--- a/app/assets/styles/partials/default/portfolio.pcss
+++ b/app/assets/styles/partials/default/portfolio.pcss
@@ -9,6 +9,7 @@
   width: 100%;
   height: 680px;
   background-color: black;
+  background-attachment: fixed;
   background-position: center;
   background-size: cover;
 }
