--- a/app/assets/styles/tech/vars.pcss
+++ b/app/assets/styles/tech/vars.pcss
@@ -6,6 +6,7 @@ $font-mainTitle: bold 68px/1.55 $font-alt;
 $font-titleAlt: bold 24px/1.55 $font-alt;
 $font-title: bold 36px/1.55 $font-alt;
 $font-sub: 300 14px/1.55 $font-alt;
+$font-proj: 300 18px/1.55 $font-alt;
 
 $header-height: 40px;
 
